--- a/python/.env
+++ b/python/.env
@@ -1,2 +1,2 @@
-DB_URI="mongodb+srv://augusto:Sh1zXYr4xHlrYfWD@cluster0.pqtfchv.mongodb.net/?retryWrites=true&w=majority"
-DB_NAME="Cluster0"
+DB_URI=[YOUR DB_URI]
+DB_NAME=[YOUR DB_NAME]
